Initial bug fixes for refactor.

--- a/examples/Sandbox.ipynb
+++ b/examples/Sandbox.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "b821c3fa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from arraytainers import Numpytainer, Jaxtainer\n",
+    "from arraytainers import Arraytainer, Jaxtainer\n",
     "import numpy as np\n",
     "from numpy import array\n",
     "import jax\n",
@@ -18,32 +18,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6458d126",
+   "execution_count": 2,
+   "id": "6177990e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "mean\n",
-      "chol_diag\n",
-      "chol_lowerdiag\n",
-      "mean\n",
-      "chol_diag\n",
-      "chol_lowerdiag\n",
-      "mean\n",
-      "chol_diag\n",
-      "chol_lowerdiag\n",
-      "mean\n",
-      "chol_diag\n",
-      "chol_lowerdiag\n"
+      "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Numpytainer({'mean': array([2.71828183]), 'chol_diag': array([2.71828183]), 'chol_lowerdiag': array([1.])})"
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(jnp.array([1,2]).copy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6458d126",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Arraytainer({'mean': array([1.], dtype=float32), 'chol_diag': array([1], dtype=int32), 'chol_lowerdiag': array([0], dtype=int32)})"
       ]
      },
      "execution_count": 3,
@@ -52,39 +62,84 @@
     }
    ],
    "source": [
-    "a = Numpytainer({'mean': jnp.array([1]), 'chol_diag': jnp.array([1]), 'chol_lowerdiag': jnp.array([0])})#{'a': {'c':[np.random.rand(6,3,5,2)], 'd':np.random.rand(6,3,5,2)}, 'b': np.random.rand(3,3,5,5), 'e':2}\n",
-    "# A = Numpytainer(a)\n",
-    "np.ones(a)"
+    "a = Arraytainer({'mean': jnp.array([1.]), 'chol_diag': jnp.array([1]), 'chol_lowerdiag': jnp.array([0])})#{'a': {'c':[np.random.rand(6,3,5,2)], 'd':np.random.rand(6,3,5,2)}, 'b': np.random.rand(3,3,5,5), 'e':2}\n",
+    "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "463c73dc",
+   "execution_count": 10,
+   "id": "b7ee95b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Jaxtainer({'mean': DeviceArray([1.], dtype=float32), 'chol_diag': DeviceArray([1], dtype=int32), 'chol_lowerdiag': DeviceArray([0], dtype=int32)})"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "A.filter(['c'], 'a').shape"
+    "a = Jaxtainer({'mean': np.array([1.]), 'chol_diag': np.array([1]), 'chol_lowerdiag': np.array([0])})#{'a': {'c':[np.random.rand(6,3,5,2)], 'd':np.random.rand(6,3,5,2)}, 'b': np.random.rand(3,3,5,5), 'e':2}\n",
+    "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fb91448c",
    "metadata": {},
    "outputs": [],
    "source": [
     "a = {'a': np.random.rand(4,3,5,5), 'b': np.random.rand(3,3,5,5)}\n",
     "A = Jaxtainer(a)\n",
-    "A.reshape(A.shape[:-2], 25).shape"
+    "# A.reshape(A.shape[:-2], 25)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "221586b7",
+   "execution_count": 6,
+   "id": "d4bc4d5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Jaxtainer({'a': DeviceArray([4, 3, 5, 5], dtype=int32), 'b': DeviceArray([3, 3, 5, 5], dtype=int32)})"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "221586b7",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Jaxtainer({'a': DeviceArray([12,  5], dtype=int32), 'b': DeviceArray([12,  5,  5], dtype=int32)})"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = {'a': np.random.rand(4,3,5), 'b': np.random.rand(3,4,5,5)}\n",
     "A = Jaxtainer(a)\n",
@@ -93,8 +148,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6d622357",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Jaxtainer({'a': DeviceArray([4, 3, 5], dtype=int32), 'b': DeviceArray([3, 4, 5, 5], dtype=int32)})"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Jaxtainer.from_array(A.flatten(), A.shape).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e4c23677",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(2)[None]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "831035ae",
    "metadata": {},
    "outputs": [],
    "source": []
