Finished debugging of major refactoring; all (modified) tests now pass.

--- a/examples/Sandbox.ipynb
+++ b/examples/Sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "b821c3fa",
    "metadata": {},
    "outputs": [],
@@ -19,20 +19,22 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6177990e",
+   "id": "600d40b0",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+      "[2]\n",
+      "[array([2])]\n",
+      "[3]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "numpy.ndarray"
+       "Arraytainer({'a': [array([2])], 'b': {'c': array([3])}})"
       ]
      },
      "execution_count": 2,
@@ -41,48 +43,78 @@
     }
    ],
    "source": [
-    "type(jnp.array([1,2]).copy())"
+    "Arraytainer({'a':[[2]],'b':{'c':[3]}})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6458d126",
+   "id": "8882483f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Arraytainer({'mean': array([1.], dtype=float32), 'chol_diag': array([1], dtype=int32), 'chol_lowerdiag': array([0], dtype=int32)})"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_22599/1739083353.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
+     ]
     }
    ],
    "source": [
-    "a = Arraytainer({'mean': jnp.array([1.]), 'chol_diag': jnp.array([1]), 'chol_lowerdiag': jnp.array([0])})#{'a': {'c':[np.random.rand(6,3,5,2)], 'd':np.random.rand(6,3,5,2)}, 'b': np.random.rand(3,3,5,5), 'e':2}\n",
-    "a"
+    "a.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "id": "6458d126",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = Arraytainer({'a':[{'a':[np.ones((12,)),np.ones((1,12))]}],'b':[{'a':[np.ones((3,4)),np.ones((4,3))]}]}, greedy=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f4fb2cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shape = Arraytainer({'a':[{'a':[np.array([6,2]),np.array([4,3])]}],'b':[{'a':[np.array([12,1]),np.array([1,12])]}]}, greedy=True)\n",
+    "a.reshape(shape).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edb77f11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[np.array([[True,False],[False,True]])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b50158a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Arraytainer.from_array(a, a.shape, greedy=True).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b7ee95b9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Jaxtainer({'mean': DeviceArray([1.], dtype=float32), 'chol_diag': DeviceArray([1], dtype=int32), 'chol_lowerdiag': DeviceArray([0], dtype=int32)})"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = Jaxtainer({'mean': np.array([1.]), 'chol_diag': np.array([1]), 'chol_lowerdiag': np.array([0])})#{'a': {'c':[np.random.rand(6,3,5,2)], 'd':np.random.rand(6,3,5,2)}, 'b': np.random.rand(3,3,5,5), 'e':2}\n",
     "a"
@@ -90,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "fb91448c",
    "metadata": {},
    "outputs": [],
@@ -102,44 +134,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d4bc4d5b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Jaxtainer({'a': DeviceArray([4, 3, 5, 5], dtype=int32), 'b': DeviceArray([3, 3, 5, 5], dtype=int32)})"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "A.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "221586b7",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Jaxtainer({'a': DeviceArray([12,  5], dtype=int32), 'b': DeviceArray([12,  5,  5], dtype=int32)})"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = {'a': np.random.rand(4,3,5), 'b': np.random.rand(3,4,5,5)}\n",
     "A = Jaxtainer(a)\n",
@@ -148,44 +158,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "6d622357",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Jaxtainer({'a': DeviceArray([4, 3, 5], dtype=int32), 'b': DeviceArray([3, 4, 5, 5], dtype=int32)})"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Jaxtainer.from_array(A.flatten(), A.shape).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "e4c23677",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.array(2)[None]"
+    "np.array(2).shape"
    ]
   },
   {
