Changed from_array so that it may be used inside of jax.vmap, jax.jacfwd, etc.

--- a/examples/Sandbox.ipynb
+++ b/examples/Sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b821c3fa",
    "metadata": {},
    "outputs": [],
@@ -60,48 +60,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "f5eef813",
+   "execution_count": 3,
+   "id": "4cf40467",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_func(x, shape):\n",
+    "    return Jaxtainer.from_array(x, shape)\n",
+    "\n",
+    "shape = Jaxtainer({'a': [2], 'b': [3] })\n",
+    "x = jnp.ones((5,))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5cbf15c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = jnp.linspace(0,10,10).reshape(2,5)\n",
+    "shape = Jaxtainer({'a': [3], 'b': [7] })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "16679150",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Arraytainer({'mean': array([4, 6]), 'chol_diag': array([4, 6, 3])})"
+       "DeviceArray([[ 0.       ,  1.1111112,  2.2222223,  3.3333335,  4.4444447],\n",
+       "             [ 5.555556 ,  6.666667 ,  7.7777777,  8.888889 , 10.       ]],            dtype=float32)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.reshape(4,a.shape[2:]).shape"
+    "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "7dcf41a9",
+   "execution_count": 14,
+   "id": "10173638",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "s\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Jaxtainer({'a': DeviceArray([0.       , 5.555556 , 1.1111112], dtype=float32), 'b': DeviceArray([ 6.666667 ,  2.2222223,  7.7777777,  3.3333335,  8.888889 ,\n",
+       "              4.4444447, 10.       ], dtype=float32)})"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "if np.array([2]) == 2:\n",
-    "    print('s')"
+    "Jaxtainer.from_array(x, shape, order='F')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cf40467",
+   "id": "2539c54f",
    "metadata": {},
    "outputs": [],
    "source": []
