Added deepcopy method so that copy.deepcopy works with Jaxtainers.

--- a/examples/Sandbox.ipynb
+++ b/examples/Sandbox.ipynb
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "from numpy import array\n",
     "import jax\n",
-    "import jax.numpy as Jnp\n",
+    "import jax.numpy as jnp\n",
     "import functools\n",
     "from jax.numpy import DeviceArray"
    ]
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "05d9be19",
+   "id": "ea135ae8",
    "metadata": {},
    "outputs": [
     {
@@ -31,128 +31,58 @@
     }
    ],
    "source": [
-    "grad = Jaxtainer({'chol_diag': {'W_0': Jnp.array([[[[ 0.00279286]]],\n",
-    "\n",
-    "\n",
-    "             [[[ 0.01032332]]],\n",
-    "\n",
-    "\n",
-    "             [[[-0.00266613]]],\n",
-    "\n",
-    "\n",
-    "             [[[ 0.01112606]]],\n",
-    "\n",
-    "\n",
-    "             [[[ 0.00290337]]]] ), 'W_1': Jnp.array([[[[0.00051949]]],\n",
-    "\n",
-    "\n",
-    "             [[[0.01312082]]],\n",
-    "\n",
-    "\n",
-    "             [[[0.02261686]]],\n",
-    "\n",
-    "\n",
-    "             [[[0.01213534]]],\n",
-    "\n",
-    "\n",
-    "             [[[0.00054655]]]] ), 'W_2': Jnp.array([[[[0.        , 0.11664951]]],\n",
-    "\n",
-    "\n",
-    "             [[[0.        , 0.13560905]]],\n",
-    "\n",
-    "\n",
-    "             [[[0.        , 0.15196358]]],\n",
-    "\n",
-    "\n",
-    "             [[[0.        , 0.1340705 ]]],\n",
-    "\n",
-    "\n",
-    "             [[[0.        , 0.11668958]]]] ), 'b_0': Jnp.array([[[0.00069865]],\n",
-    "\n",
-    "             [[0.01274421]],\n",
-    "\n",
-    "             [[0.01368405]],\n",
-    "\n",
-    "             [[0.01217299]],\n",
-    "\n",
-    "             [[0.00073464]]] ), 'b_1': Jnp.array([[[0.04854767]],\n",
-    "\n",
-    "             [[0.04595512]],\n",
-    "\n",
-    "             [[0.04075592]],\n",
-    "\n",
-    "             [[0.04629732]],\n",
-    "\n",
-    "             [[0.04854579]]] ), 'b_2': Jnp.array([[[0.        , 0.23161444]],\n",
-    "\n",
-    "             [[0.        , 0.22759525]],\n",
-    "\n",
-    "             [[0.        , 0.22343118]],\n",
-    "\n",
-    "             [[0.        , 0.22795208]],\n",
-    "\n",
-    "             [[0.        , 0.23160677]]] )}, 'mean': {'W_0': Jnp.array([[[[-0.06035011]]],\n",
-    "\n",
-    "\n",
-    "             [[[-0.2012724 ]]],\n",
-    "\n",
-    "\n",
-    "             [[[ 0.04682521]]],\n",
-    "\n",
-    "\n",
-    "             [[[-0.21889485]]],\n",
-    "\n",
-    "\n",
-    "             [[[-0.06272566]]]] ), 'W_1': Jnp.array([[[[-0.01122542]]],\n",
-    "\n",
-    "\n",
-    "             [[[-0.25581497]]],\n",
-    "\n",
-    "\n",
-    "             [[[-0.39721894]]],\n",
-    "\n",
-    "\n",
-    "             [[[-0.23875146]]],\n",
-    "\n",
-    "\n",
-    "             [[[-0.01180792]]]]  ), 'W_2': Jnp.array([[[[0.9112797 , 0.        ]]],\n",
-    "\n",
-    "\n",
-    "             [[[0.9558597 , 0.        ]]],\n",
-    "\n",
-    "\n",
-    "             [[[0.96489006, 0.        ]]],\n",
-    "\n",
-    "\n",
-    "             [[[0.9536035 , 0.        ]]],\n",
-    "\n",
-    "\n",
-    "             [[[0.9114121 , 0.        ]]]] ), 'b_0': Jnp.array([[[-0.01509693]],\n",
-    "\n",
-    "             [[-0.24847227]],\n",
-    "\n",
-    "             [[-0.24033237]],\n",
-    "\n",
-    "             [[-0.23949215]],\n",
-    "\n",
-    "             [[-0.01587137]]] ), 'b_1': Jnp.array([[[-1.0490509 ]],\n",
-    "\n",
-    "             [[-0.89598113]],\n",
-    "\n",
-    "             [[-0.71579456]],\n",
-    "\n",
-    "             [[-0.9108562 ]],\n",
-    "\n",
-    "             [[-1.0488026 ]]] ), 'b_2': Jnp.array([[[1.8093991, 0.       ]],\n",
-    "\n",
-    "             [[1.6042377, 0.       ]],\n",
-    "\n",
-    "             [[1.4186723, 0.       ]],\n",
-    "\n",
-    "             [[1.6213553, 0.       ]],\n",
-    "\n",
-    "             [[1.808981 , 0.       ]]])}})\n",
-    "phi_sizes = Jaxtainer({'chol_diag': Jnp.array(1), 'mean': Jnp.array(1)})"
+    "phi = Jaxtainer({0: {'mean': jnp.array([[0.]]), 'log_chol_diag': jnp.array([[0.]])}, 1: {'mean': jnp.array([[0.]]), 'log_chol_diag': jnp.array([[0.]])}, 'log_unnorm_coeff': jnp.array([[0., 0.]])})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "757c00c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Jaxtainer({0: {'mean': DeviceArray([[0.]], dtype=float32), 'log_chol_diag': DeviceArray([[0.]], dtype=float32)}, 1: {'mean': DeviceArray([[0.]], dtype=float32), 'log_chol_diag': DeviceArray([[0.]], dtype=float32)}, 'log_unnorm_coeff': DeviceArray([[0., 0.]], dtype=float32)})"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import copy\n",
+    "copy.copy(phi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "05d9be19",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Dictionary key sort failed.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_2305/1799602931.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'log_unnorm_coeff'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mjax\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_func\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0min_axes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mphi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munpacked\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "    \u001b[0;31m[... skipping hidden 2 frame]\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/jax/_src/tree_util.py\u001b[0m in \u001b[0;36mtree_flatten\u001b[0;34m(tree, is_leaf)\u001b[0m\n\u001b[1;32m     50\u001b[0m     \u001b[0melement\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0ma\u001b[0m \u001b[0mtreedef\u001b[0m \u001b[0mrepresenting\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mstructure\u001b[0m \u001b[0mof\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mflattened\u001b[0m \u001b[0mtree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m   \"\"\"\n\u001b[0;32m---> 52\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mpytree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtree\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mis_leaf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     53\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Dictionary key sort failed."
+     ]
+    }
+   ],
+   "source": [
+    "phi = Jaxtainer({0: {'mean': jnp.array([[0.]]), 'log_chol_diag': jnp.array([[0.]])}, 1: {'mean': jnp.array([[0.]]), 'log_chol_diag': jnp.array([[0.]])}, 'log_unnorm_coeff': jnp.array([[0., 0.]])})\n",
+    "def my_func(x):\n",
+    "    print(x)\n",
+    "    return x['log_unnorm_coeff']\n",
+    "func= jax.vmap(my_func, in_axes=0)\n",
+    "func(phi.unpacked)"
    ]
   },
   {
